ISTIO-BASE/deploy-server-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app07-v1
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: app07
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: "app07"
        version: v1
    spec:
      containers:
      - image: gimboo/nginx_nonroot
        imagePullPolicy: Always
        name: app07
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
