ISTIO-BASE/service_clusterip-consumer.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consumer
  name: consumer-service
spec:
  ports:
  - port: 8080
    name: http
    protocol: TCP
    targetPort: 8080
  selector:
    app: consumer
  sessionAffinity: None
  type: ClusterIP
