ISTIO-BASE/destination-rule-Server-v1-v2.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: destrule-app07
  #namespace: istio-system
spec:
  host: app07.slawek.svc.cluster.local
  subsets:
  - labels:
      version: v1
    name: version-v1
  - labels:
      version: v2
    name: version-v2
