ISTIO-BASE/virtual-service-PROXY-dla-GATEWAYa.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: proxy
  #namespace: istio-system
spec:
  hosts:
  - '*'
    #MOZNA TEZ HOST: - uk.bookinfo.com
  gateways:
  - slawek/mygateway    
    #WARTO ZBADAC TEN KLUCZ: - mesh
  http:
  - route:
    - destination:
        #host: proxy
        host: app07.slawek.svc.cluster.local
        subset: version-v2
      weight: 100
    - destination:
        #host: proxy
        host: app07.slawek.svc.cluster.local
        subset: version-v1
      weight: 0
